working-blocks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atlas
  namespace: ohdsi
spec:
  rules:
  - host: 203.101.238.240.nip.io
    http:
      paths:
      - path: /WebAPI
        pathType: Prefix
        backend:
          service:
            name: webapi
            port:
              number: 8080
      - path: /atlas
        pathType: Prefix
        backend:
          service:
            name: atlas
            port:
              number: 8080
